@@ -2,6 +2,10 @@ Entries are sorted chronologically from oldest to youngest within each release,
 releases are sorted from youngest to oldest.
 
 
+version <next>:
+- BWF muxer
+
+
 version 0.7:
 
 - E-AC-3 audio encoder
